--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							Python, SQL, Power BI.<br />
 							Me motiva estar actualizada con las herramientas de trabajo y por eso sigo aprendiendo de forma autodidacta.
 							Actualmente estoy iniciandome en Tableau y plataformas cloud.<br />
-							Y claro... para realizar esta página tambien aprendí un poco de HTML. En este mundo, es dificil trazar fronteras! 😄
+							Y claro... para realizar esta página tambien aprendí un poco de HTML. En este mundo, es dificil trazar fronteras! 
 
 							
 						</p>
